<resources>
    <string name="app_name">Charities</string>
    <string name="new_form_link" translatable="false">https://goo.gl/forms/wtJQeDD4VclJhfjk2</string>
    <string name="yes">Υes</string>
    <string name="no">Νo</string>
    <string name="error">An error has been occurred! Pleas try again!</string>
    <string name="add_institute">Add Charity</string>
    <string name="share_text">Share the app at:</string>
    <string name="google_play_prefix" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <!--List Wishes XML -->
    <string name="send_Wish_Dialog">Make a donation</string>
    <string name="send_Wish_Dialog_Msg">Please make a donation first, before you can send a wish</string>
    <string name="spinner_wishes_prompt">Select Charity</string>
    <string name="fill_textview">Please fill the name, wish fields and select an organization!</string>
    <string name="wish_sent">Your Wish was added succesfully!</string>
    <!-- Charity Detail XML -->
    <string name="sms">&#xf003; Send an SMS</string>
    <string name="call">&#xf095; Make a Call</string>
    <string name="donate">Make a donation:</string>
    <string name="call_cost">cost per call</string>
    <string name="sms_cost">cost per sms</string>
    <string name="desc">Description</string>
    <!-- Main Activity XML -->
    <string name="Social_icons">&#xf09a; &#xf099; &#xf232; </string>
    <string name="Share">Διαδώστε!</string>
    <!-- GridView Items -->
    <string name="make_donation">Κάντε Δωρεά!</string>
    <string name="add_donation">Προσθέστε Δωρεά!</string>
    <string name="make_wish">Κάντε μια ευχή!</string>
    <string name="info">Πληροφορίες</string>
    <string name="empty_view">Τα αποτελέσματα έρχονται…</string>
    <string name="open_dialog">"Γνωρίζετε κάποιο ίδρυμα - ΜΚΟ - Έρανο που δέχεται προσφορές μέσω SMS ή με κλήση σε κάποιον τηλεφωνικό αριθμό, το οποίο δεν περιέχεται στην εφαρμογή και θέλετε να το προσθέσετε;"</string>

    <!--Onboarding screens-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_desc">Charities is the easiest way to make a donation!</string>
    <string name="slide_2_desc">Just select the organization you would like to contribute</string>
    <string name="slide_3_desc">Pick with which way you would like to donate.\n(SMS or Phone call)</string>
    <string name="slide_4_desc">Don\'t forget to send your wishes!</string>

    <!--Navigation drawer-->
    <string name="home">Κεντρική Σελίδα</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_info">Information</string>
    <string name="large_text" translatable="false">
        "Προσφέρω! by Greek udacity Android scholarship community \n\n"

        "Η εφαρμογή «Προσφέρω!» δημιουργήθηκε για να διευκολύνει την προσφορά σε φιλανθρωπικούς και φιλοζωικούς οργανισμούς και μη κυβερνητικές οργανώσεις. \n\n"

        "Η εφαρμογή περιέχει πληροφορίες για τον κάθε οργανισμό και με ένα απλό κλικ μπορείτε κι εσείς να κάνετε μία μικρή δωρεά με μία κλήση ή ένα sms! \n\n"

        "Προσφέρετε κι εσείς μία μικρή βοήθεια στον σκοπό που θέλετε να στηρίξετε και αφήστε μια ευχή στον τοίχο της εφαρμογής για να την διαβάσουν όλοι οι χρήστες! \n\n"

        "Ξέρετε κάποιον ακόμη οργανισμό που παρέχει δυνατότητα δωρεάς μέσω κλήσης ή sms και δεν περιλαμβάνεται στη λίστα; Μπορείτε εύκολα να τον προσθέσετε μέσα από την εφαρμογή! \n\n"

        "Σημαντική παρατήρηση: Η εφαρμογή δεν αποθηκεύει κανένα προσωπικό δεδομένο των χρηστών ούτε τοπικά ούτε στο cloud, ούτε αποθηκεύει τις δωρεές. \n\n"

        "Ιστορία πίσω από την εφαρμογή: \n\n"

        "Η εφαρμογή «Προσφέρω!» δημιουργήθηκε από την Ελληνική κοινότητα υπότροφων «Google Challenge Scholarship for Android Developing» στην πλατφόρμα Udacity. \n\n"

        "Μια ομάδα 12 συμμετεχόντων σπουδαστών – προγραμματιστών θέλοντας να εξασκηθεί στα πλαίσια των μαθημάτων, αποφάσισε να δημιουργήσει αυτή την εφαρμογή ώστε ταυτόχρονα με την εκμάθηση να προσφέρει στην κοινωνία. \n\n"

        "Η εφαρμογή δημιουργήθηκε καθαρά για διδακτικούς σκοπούς και δεν έχει κανένα οικονομικό όφελος – κίνητρο από την λειτουργία της ούτε και σχετίζεται με κανέναν από τους οργανισμούς που φιλοξενούνται. \n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="txt_send_a_wish">ΣΤΕΙΛΤΕ ΜΙΑ ΕΥΧΗ</string>
    <string name="txt_wishes">Wishes</string>

</resources>
